fix editor overflow issue

--- a/app/assets/stylesheets/views/article-form.scss
+++ b/app/assets/stylesheets/views/article-form.scss
@@ -72,8 +72,6 @@
   }
 
   &__content {
-    display: flex;
-    flex-direction: column;
     height: 100%;
     overflow: auto;
     height: calc(
